[gd_scene load_steps=8 format=3 uid="uid://dsqa244d34lyo"]

[ext_resource type="Script" uid="uid://cl6vmfhg70y1g" path="res://Scenes/UI/hud.gd" id="1_omqfp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umhnj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omqfp"]
bg_color = Color(0.9427944, 0.3930753, 0.44553214, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qc5w2"]
bg_color = Color(1, 0.4945157, 0.32272613, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xaom8"]
bg_color = Color(0.37187055, 1, 0.5582763, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4bm6u"]
bg_color = Color(0.92070127, 0, 0.32272613, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ykvyr"]
bg_color = Color(0, 0.5793735, 1, 1)

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_omqfp")

[node name="MainControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="MainControl"]
layout_mode = 0
offset_left = 31.0
offset_top = 12.0
offset_right = 231.0
offset_bottom = 39.0
theme_override_styles/background = SubResource("StyleBoxFlat_umhnj")
theme_override_styles/fill = SubResource("StyleBoxFlat_omqfp")

[node name="ConnectionBars" type="VBoxContainer" parent="MainControl"]
layout_mode = 0
offset_left = 664.0
offset_top = 14.0
offset_right = 929.0
offset_bottom = 134.0

[node name="DayDreamerRow" type="HBoxContainer" parent="MainControl/ConnectionBars"]
layout_mode = 2

[node name="Label" type="Label" parent="MainControl/ConnectionBars/DayDreamerRow"]
layout_mode = 2
text = "DayDreamer"

[node name="DayDreamer" type="ProgressBar" parent="MainControl/ConnectionBars/DayDreamerRow"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_qc5w2")

[node name="PatternSeekerRow" type="HBoxContainer" parent="MainControl/ConnectionBars"]
layout_mode = 2

[node name="Label" type="Label" parent="MainControl/ConnectionBars/PatternSeekerRow"]
layout_mode = 2
text = "PatternSeeker"

[node name="PatternSeeker" type="ProgressBar" parent="MainControl/ConnectionBars/PatternSeekerRow"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_xaom8")

[node name="BloodRushRow" type="HBoxContainer" parent="MainControl/ConnectionBars"]
layout_mode = 2

[node name="Label" type="Label" parent="MainControl/ConnectionBars/BloodRushRow"]
layout_mode = 2
text = "Bloodrush"

[node name="BloodRush" type="ProgressBar" parent="MainControl/ConnectionBars/BloodRushRow"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_4bm6u")

[node name="MimicRow" type="HBoxContainer" parent="MainControl/ConnectionBars"]
layout_mode = 2

[node name="Label" type="Label" parent="MainControl/ConnectionBars/MimicRow"]
layout_mode = 2
text = "Mimic"

[node name="Mimic" type="ProgressBar" parent="MainControl/ConnectionBars/MimicRow"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_ykvyr")

[node name="StatusList" type="VBoxContainer" parent="MainControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 837.0
offset_top = 258.0
offset_right = 877.0
offset_bottom = 298.0
grow_horizontal = 0
grow_vertical = 2

[node name="VoidOverlay" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
